Wrap notice alert into pretty component and fixed wrong identation

--- a/app/assets/stylesheets/contact.css
+++ b/app/assets/stylesheets/contact.css
@@ -2,8 +2,8 @@
   background: orange;
   border: none;
  }
- 
- .contact-btn:hover {
-   background: darkorange;
-   border: none;
-  }
+
+.contact-btn:hover {
+  background: green;
+  border: none;
+}
